# AnySoftKeyboard

./: .bazelrc  .classpath  .drone.yml  .eslintrc  .gitignore  .npmrc  .prettier.config.cjs  .prettierignore  .project  .travis.yml  .yamlfmt.yml  AGENTS.md  AndroidManifest.xml  AndroidStyle.xml  AnySoftKeyboardLanguagePackFrench.apk  Application.mk  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GEMINI.md  LICENSE  MODULE.bazel  Private_Play_Store.txt  README.md  STARTUP_PREFS_APPLY.xml  WORKSPACE.bzlmod  ant.properties  build.gradle  build.properties  build.xml  build.xml1  build_backup.xml  cassandra.toml  circle.yml  codecov.yml  codecov_android.yml  codecov_bazel.yml  config.properties  constants.gradle  (+35 more)
.aswb/: build_dependencies.bzl  build_dependencies_android_deps.bzl  build_dependencies_deps.bzl  qs-AnySoftKeyboardb291f677.bzl
.cassandra/: drive-by-fixes.md  translation_rules.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.github/: CODEOWNERS  FUNDING.yml  actionlint.yaml  renovate.json
.jules/: bolt.md
.metals/: metals.lock.db
StoreStuff/: ask_logo.xcf  feature_graphics.pxd  privacy_policy.html  privacy_policy_beta.html  store_hi_res_icon.xcf
addons/: CONTRIBUTING.md  Private_Play_Store.txt  build.gradle  settings.gradle
api/: build.gradle
api_migration/: build.gradle  circle.yml
app/: build.gradle  proguard-android-optimize.txt  proguard-anysoftkeyboard.txt  proguard-rules.txt
assembling_LanguagePack/: .gitignore  build.gradle  circle.yml
assets/: bg  de  en  es  fi  fr  he  nl  pt  ru  sl  sv  uk
base/: build.gradle
base-rx/: build.gradle
base-test/: build.gradle
buildSrc/: build.gradle
checkstyle/: checkstyle.xml
conductor/: index.md  tracks.md
config/: lint.xml  yamllint.yml
configs/: findbugs-exclude.xml  lint.xml
crashlytics/: build.gradle
deployment/: build.gradle  halt_deployment_marker
dict/: LICENSE_for_en.txt  en.xml  words.xml
dict_creation/: android_metadata_create.sql  dict_metadata_table_create.sql  dict_table_create.sql  makedict  makedict_Windows.bat  uuidgen_Linux  uuidgen_Windows.bat
dictionaries/: build.gradle
dictionary/: NY_STATE_ASSEMBLY_TRANSCRIPT_20120621.txt  popular_websites_words.xml  words_en_wikipedia_civil_war.xml  words_merged.xml
emojis/: BUILD.bazel  EmojiCollection.java  EmojiCollector.java  EmojiData.java  EmojiKeyboardCreator.java  EmojiKeyboardCreatorTest.java  EmojiKeyboardsExtractor.java  EmojiLayoutsGenerator.java  UnicodeOrgEmojiTestDataParser.java  UnicodeOrgEmojiTestDataParserTest.java  VariantDetector.java  VariantDetectorTest.java  emoji-test.txt
emojis/fixtures/: expected_test_keyboard.xml  expected_test_keyboard_with_genders_and_skin_tones.xml  expected_test_keyboard_with_popups.xml  expected_test_keyboard_with_popups_popup_0.xml
emojis/full_emoji_data_files/: analytics.js  emoji-list.css  lastModified.js
emojis/utils/: JavaEmojiUtils.java
english_dictionary/: LICENSE_for_en.txt  words.xml  words_en_wikipedia_jimbo.xml  words_en_wikipedia_manual_of_style.xml  words_from_inputs.xml  words_merged.xml
fileprovider/: build.gradle
gradle/: all_android.gradle  android_general.gradle  android_settings.gradle  android_unit_test.gradle  apk_module.gradle  checkstyle.gradle  constants.gradle  dictionary_generator.gradle  emoji_generator.gradle  errorprone.gradle  fdroid_yaml_output.gradle  findbugs.gradle  generate_icons.gradle  jacoco.gradle  language_pack.gradle  language_pack_apk.gradle  language_pack_lib.gradle  language_pack_publish_maven.gradle  libs.versions.toml  make_dictionary.gradle  pack_apk.gradle  pmd.gradle  publish_maven.gradle  quicktext_pack_lib.gradle  root_all_projects_ext.gradle  root_general.gradle  spotbugs.gradle  (+6 more)
ime/dictionaries/jnidictionaryv2/: Android.mk  CMakeLists.txt  build.gradle
ime/dictionaries/jnidictionaryv2/src/main/java/com/anysoftkeyboard/dictionaries/jni/: ResourceBinaryDictionary.java
ime/dictionaries/jnidictionaryv2/src/main/jni/include/: char_utils.h  dictionary.h
ime/dictionaries/jnidictionaryv2/src/main/jni/source/: char_utils.cpp  com_anysoftkeyboard_dictionaries_ResourceBinaryDictionary.cpp  dictionary.cpp
js/: BUILD.bazel  jest.config.json  oxc_emitter.bzl  ts.bzl  ts_test.bzl  tsconfig.json
js/ai/: BUILD.bazel  ai_code_review.ts  index.ts  mcp_read_multiple_files.ts  translation_verification.ts
js/auto_approval/: BUILD.bazel  approval.test.ts  approval.ts  index.ts  package-lock.json  package.json
js/check_all_green/: BUILD.bazel  green_checker.test.ts  green_checker.ts  index.ts
js/checkers/: BUILD.bazel  checker.ts  index.ts  unique_addon_id.test.ts  unique_addon_id.ts
js/contributors/: BUILD.bazel  contributors.test.ts  contributors.ts  index.ts
js/deps_updater/: BUILD.bazel  github_actions_updater.test.ts  github_actions_updater.ts  gradle_deps_to_update.test.ts  gradle_deps_to_update.ts  gradle_deps_updater.test.ts  gradle_deps_updater.ts  index.ts  latest_version_locator.test.ts  latest_version_locator.ts
js/github_deployments/: BUILD.bazel  deployment.test.ts  deployment.ts  deployment_config.test.ts  deployment_config.ts  deployment_request.test.ts  deployment_request.ts  deployment_status.test.ts  deployment_status.ts  github_api.test.ts  github_api.ts  index.ts
js/localization_tools/: BUILD.bazel  clean_empty_translations.test.ts  clean_empty_translations.ts  deleter.test.ts  deleter.ts  diff_parser.test.ts  diff_parser.ts  fake_diff.txt  fake_strings.xml  index.ts  locales_generator.test.ts  locales_generator.ts  replace_ellipsis.test.ts  replace_ellipsis.ts  utils.test.ts  utils.ts
js/localization_tools/diff_parser/: BUILD.bazel  index.ts
js/localization_tools/test_fixtures/: fake_diff.txt
js/tests/oxc_emitter_test/: BUILD.bazel  another.ts  test.ts
js/upadte_aosp_dictionaries/: aosp_mapping.yml  index.ts
js/update_aosp_dictionaries/: BUILD.bazel  aosp_mapping.yml  differ.ts  index.ts  lineage_mapping.yml
tools/: BUILD.bazel  linters.bzl  multitool.lock.json
tools/repo_patches/: BUILD.bazel  rules_nodejs_pr_3802.patch
(+9632 files in other folders)
