load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "jest.config",
    srcs = ["jest.config.json"],
    visibility = ["//visibility:public"],
)

npm_link_all_packages(name = "node_modules")

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    deps = [
        "//:node_modules/@eslint/js",
        "//:node_modules/@typescript-eslint",
        "//:node_modules/globals",
        "//:node_modules/@eslint/eslintrc",
    ],
    visibility = ["//visibility:public"],
)
