load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

copy_to_bin(
    name = "prettierignore",
    srcs = [".prettierignore"],
)

copy_to_bin(
    name = "gitignore",
    srcs = [".gitignore"],
)

copy_to_bin(
    name = "yamlfmt.yml",
    srcs = [".yamlfmt.yml"],
)

npm_link_all_packages(name = "node_modules")

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    deps = [
        "//:node_modules/@eslint/eslintrc",
        "//:node_modules/@eslint/js",
        "//:node_modules/@typescript-eslint",
        "//:node_modules/globals",
    ],
)

js_library(
    name = "prettierrc",
    srcs = [".prettier.config.cjs"],
)

alias(
    name = "format",
    actual = "//tools:format",
)
