load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")

ts_library(
    name = "translation_verification",
    srcs = [
        "translation_verification.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@langchain/core",
        "//:node_modules/@langchain/google-genai",
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "ai_cli",
    srcs = ["index.ts"],
    visibility = ["//visibility:private"],
    deps = [
        ":translation_verification",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
    ],
)

js_binary(
    name = "ai",
    data = [":ai_cli"],
    entry_point = "index.js",
)
