load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")
load("//js:ts_test.bzl", "ts_test")

ts_library(
    name = "approval",
    srcs = [
        "approval.ts",
        "index.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@actions/github",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
        "//:node_modules/undici",
    ],
)

js_binary(
    name = "auto_approval",
    data = [":approval"],
    entry_point = "index.js",
)

ts_test(
    name = "green_checker_tests",
    entry_point = "approval.test.ts",
    deps = [":approval"],
)
