load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")

ts_library(
    name = "checkers_lib",
    srcs = [
        "checker.ts",
        "index.ts",
        "unique_addon_id.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/commander",
        "//:node_modules/fast-xml-parser",
    ],
)

js_binary(
    name = "checkers",
    data = [":checkers_lib"],
    entry_point = "dist/index.js",
)
