load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")
load("//js:ts_test.bzl", "ts_test")

ts_library(
    name = "checkers_lib",
    srcs = [
        "checker.ts",
        "index.ts",
        "unique_addon_id.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/commander",
        "//:node_modules/fast-xml-parser",
    ],
)

js_binary(
    name = "checkers",
    data = [":checkers_lib"],
    entry_point = "index.js",
)

ts_test(
    name = "unique_addon_id_tests",
    entry_point = "unique_addon_id.test.ts",
    deps = [":checkers_lib"],
)
