load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")
load("//js:ts_test.bzl", "ts_test")

ts_library(
    name = "contributors_lib",
    srcs = [
        "contributors.ts",
        "index.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@actions/github",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
        "//:node_modules/undici",
    ],
)

js_binary(
    name = "contributors",
    data = [":contributors_lib"],
    entry_point = "dist/index.js",
)

ts_test(
    name = "contributors_tests",
    entry_point = "contributors.test.ts",
    deps = [":contributors_lib"],
)
