load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")
load("//js:ts_test.bzl", "ts_test")

ts_library(
    name = "github_deployments_lib",
    srcs = [
        "deployment.ts",
        "deployment_config.ts",
        "deployment_request.ts",
        "deployment_status.ts",
        "github_api.ts",
        "index.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@actions/github",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
    ],
)

js_binary(
    name = "github_deployments",
    data = [":github_deployments_lib"],
    entry_point = "index.js",
)

ts_test(
    name = "deployment_config_tests",
    entry_point = "deployment_config.test.ts",
    deps = [":github_deployments_lib"],
)

ts_test(
    name = "github_api_tests",
    entry_point = "github_api.test.ts",
    deps = [":github_deployments_lib"],
)

ts_test(
    name = "deployment_tests",
    entry_point = "deployment.test.ts",
    deps = [":github_deployments_lib"],
)

ts_test(
    name = "deployment_status_tests",
    entry_point = "deployment_status.test.ts",
    deps = [":github_deployments_lib"],
)

ts_test(
    name = "deployment_request_tests",
    entry_point = "deployment_request.test.ts",
    deps = [":github_deployments_lib"],
)
