load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")
load("//js:ts_test.bzl", "ts_test")

ts_library(
    name = "delete_localization_files",
    srcs = [
        "deleter.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@types/js-yaml",
        "//:node_modules/@types/node",
        "//:node_modules/js-yaml",
    ],
)

ts_library(
    name = "generate_locales",
    srcs = [
        "locales_generator.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "cli",
    srcs = ["index.ts"],
    visibility = ["//visibility:private"],
    deps = [
        ":delete_localization_files",
        ":generate_locales",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
    ],
)

js_binary(
    name = "localization_tools",
    data = [":cli"],
    entry_point = "dist/index.js",
)

ts_test(
    name = "generate_locales_tests",
    entry_point = "locales_generator.test.ts",
    deps = [":generate_locales"],
)

ts_test(
    name = "delete_localization_files_tests",
    entry_point = "deleter.test.ts",
    deps = [
        ":delete_localization_files",
        "//:node_modules/@types/js-yaml",
        "//:node_modules/js-yaml",
    ],
)
